feat: update filter to support filter by date and tags
